# rocketbeanstv-mediathek-downloader

./: .gitignore  .pre-commit-config.yaml  build-zipapp.bat  build.bat  pyproject.toml  rbtv-mediathek.py  rbtv_dl.py  readme.md  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml
rbtv-mediathek/: __main__.py
