[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["."]
line_length = 120

[tool.poetry]
name = "rbtv-dl"
version = "0.8"
authors = ["Dobatymo <Dobatymo@users.noreply.github.com>"]
description = "Rocket Beans TV Mediathek downloader and browser"
packages = [
    { include = "rbtv_dl.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
platformdirs = "^3.5.0"
genutility = {version = ">=0.0.102", extras = ["args", "iter", "unqlite"]}
python-dateutil = "^2.8.2"
rbtv-api = "^0.0.8"
unqlite = "^0.9.3"
yt-dlp = "^2022.10.04"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
